# babel

./: CMakeLists.txt  clean  conanfile.txt  data.qrc  make
client/include/: AAudioManager.hpp  ANetworkManager.hpp  Client.hpp  IAudioManager.hpp  ICompressionManager.hpp  INetworkManager.hpp  Opus.hpp  PortAudio.hpp  QtNetwork.hpp  QtPtcl.hpp  QtUdpNetwork.hpp
client/src/: Client.cpp  Opus.cpp  PortAudio.cpp  QtNetwork.cpp  QtUdpNetwork.cpp  main.cpp
doc/: protocol.docx
gui/include/: IUserInterface.hpp  QtUserInterface.hpp  connectionPage.hpp  mainPage.hpp
gui/src/: QtUserInterface.cpp  connectionPage.cpp  mainPage.cpp
network/: DataPacket.cpp  DataPacket.hpp  INetwork.hpp  Protocol.hpp
server/include/: ACommands.hpp  AHandler.hpp  AReceiver.hpp  AServer.hpp  AsioPkg.hpp  ClientInfos.hpp  Commands.hpp  Exception.hpp  Handler.hpp  ICommands.hpp  IHandler.hpp  IReceiver.hpp  IServer.hpp  IStorage.hpp  Receiver.hpp  Server.hpp  Storage.hpp
server/src/: Commands.cpp  Exception.cpp  Handler.cpp  Receiver.cpp  Server.cpp  Storage.cpp  main.cpp
test/: Opus.cpp  Opus.hpp
